# src/main/resources/swagger-rh.yaml
@@ -9,41 +9,17 @@ info:
 
 tags:
   - name: "regions"
-    description: "Tout sur les régions"
+    description: "Toutes actions sur les régions"
 paths:
   /regions:
-    put:
-      tags:
-        - regions
-      summary: modifier une region en DB"
-      operationId: "updateRegions"
-      requestBody:
-        description: ""
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/RegionsDto'
-      responses:
-        "200":
-          description: "Opération réussie"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RegionsDto'
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Region not found"
-        "405":
-          description: "Validation exception"
+
     post:
       tags:
         - regions
-      summary: "Ajouter une region en DB"
+      summary: "Ajouter une nouvelle region en DB"
       operationId: "addRegions"
       requestBody:
-        description: ""
+        description: "Nouvelle adresse"
         required: true
         content:
           application/json:
@@ -124,18 +100,46 @@ paths:
           description: "Invalid ID supplied"
         "404":
           description: "Pet not found"
+    put:
+      tags:
+        - regions
+      summary: modifier une region en DB"
+      operationId: "updateRegions"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Identifiant de la regions"
+          required: true
+          schema:
+            type: "integer"
+            format: "int64"
+            minimum: 1
+      requestBody:
+        description: ""
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegionsDto'
+      responses:
+        "200":
+          description: "Opération réussie"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RegionsDto'
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Region not found"
+        "405":
+          description: "Validation exception"
 
 components:
-  responses:
-    NotFound:
-      description: "La ressource spécifiée est introuvable"
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Error'
-
+  #-------------------------------
+  # Reusable schemas (data models)
+  #-------------------------------
   schemas:
-
     RegionsDto:
       description: Une region model
       type: object
@@ -159,3 +163,13 @@ components:
       required:
         - code
         - message
+  #-------------------------------
+  # Reusable responses
+  #-------------------------------
+  responses:
+    NotFound:
+      description: "La ressource spécifiée est introuvable"
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
